tests/baselines/reference/emptyGenericParamList.errors.txt
==== tests/cases/compiler/emptyGenericParamList.ts (1 errors) ====
    class I<T> {}
    var x: I<>;
            ~
!!! emptyGenericParamList.ts(2,9): error TS1097: 'type argument' list cannot be empty.